--- a/gb/25/11/29/n14645754.md
+++ b/gb/25/11/29/n14645754.md
@@ -3,10 +3,12 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>香港大火夺逾百命 甄妮黄秋生等艺人呛官方</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/07/id14554057-zhen-ni-600x400.jpg" />
-<h6>甄妮资料照。（黄宗茂/大纪元）</h6>
+<h6>甄妮资料照。（黄宗茂／大纪元）</h6>
 <hr>
 	<p>【大纪元2025年11月30日讯】（大纪元记者佟亦加报导）香港大埔宏福苑11月26日发生五级火警，警方11月29日通报，截至当天下午3时，大火已酿成128人死亡、83人受伤，仍有150人失联。香港官方认为，包住大楼的竹棚架是火势快速蔓延的主因。对此，甄妮、黄秋生等艺人纷纷发声，驳斥“竹子助燃”，直指外墙防护网是“助燃元凶”。</p>
 <p>对于酿成重大火灾的原因，网上一度流传“竹棚易燃”的说法，甚至有陆媒将火势扩大归咎于香港传统的竹制脚手架，香港官方在记者会上也顺从和附和这种声音，刻意避开大陆提供的外墙防护网。</p>
+</p>
+<p><center><a title="香港大火夺逾百命 甄妮黄秋生等艺人呛官方【 #听纪元 】| #大纪元新闻" loading="lazy" data2-src=""></a><a href="https://d2aqxvnyguf0uq.cloudfront.net/A7hzcNZZe4Sg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1i4qjpp0prd1gYFuUd8MRN5Q61ui1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <p>歌后甄妮27日在脸书发文，表示自己看了新闻，觉得起因是烟头烧到绿网（防护网），接着是保丽龙（发泡胶），然后烧到绑竹棚的绳子，竹棚是最后才燃烧。她直呼“竹子是冤枉的（三明治夹中间）”，强调竹子不会自己起火。</p>
 <p>甄妮批评政府失职：“百姓要的不多，只想‘安居乐业’而已，每日努力、奔波、交税，只为两餐。政府机关身为‘公仆’到底把关了些什么？最起码的良知在那里？令富更富、贫更贫，毫无安全感可言！‘东方之珠’不再。”</p>
 <p>影帝黄秋生同一天也在脸书用广东话写道：“拿根竹子点火试试就知道啦，到底是网子着火快，还是竹子着火快，什么才叫易燃物呢？”他直言，用常识就能判断“竹子助燃”的说法站不住脚。</p>
@@ -15,14 +17,22 @@
 <p>歌手吴林峰也表示，不是竹棚的问题，而是有人为因素加上未用阻燃网致使火灾蔓延。他吐槽香港官方的说法：“居然把问题分散于搭棚使用的材料导致这次事件，有没有良心啊，这样去误导，不要害一个行业，我知道材料一定有关，但不应该借此分散大家注意力，应该要让工程负责人出来说明吧！”</p>
 <p>事发前网上曾传出宏福苑施工方张贴的公告，显示大楼外围的防护绳网是由一家名叫山东宸旭化纤绳网有限公司的企业生产，产品的质检报告也是由山东滨州检测中心出具。</p>
 <p>甄妮透露，自己已捐款助香港赶快克服难关。她在帖文中呛声：“事发后官员说废话，不是第一次，更不会是最后一次，烧的不是他家！看拿谁来‘祭旗’？？？”她感慨，香港是“悲情城市，活的毫无安全感”。</p>
-<p>责任编辑：杨明</p>
+<p>责任编辑：杨明#</p>
+<div class="related-article" style="margin-top: 1.5em; font-weight: bold;">推荐阅读：</div>
+<ul class="related-posts" style="padding: 0 0 1em 25px; margin-left: 10px; color: #039; list-style: outside;">
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644967.md#1" rel="noopener">香港大火128人死 官方速排除棚网问题惹议</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645355.md#1" rel="noopener">香港大火 工程标准大陆化被指是祸因</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646148.md#1" rel="noopener">香港大火曝更多内幕 港人在全球发动咎责联署</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645821.md#1" rel="noopener">周润发满头白发登MAMA 率全场哀悼火灾罹难者</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645283.md#1" rel="noopener">甄子丹妻称大陆货酿香港大火 遭网暴后急删文</a></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/7/n10959110.md#1" target="_blank">冯八飞：请问候劳鹤——真正的知识分子爱因斯坦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/6/n11434332.md#1" target="_blank">俞元：与中共“求同存异” 无疑引狼入室</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
